criei a lista não ordenada

--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
 </head>
 <body>
     <!-- lista ordenada-->
-<ol>        
+<ol type="1">        
 <li>o amor tem dessas</li>
 <li>like him</li>
 <li>pior versão de mim</li>
 <li>iguaria</li>
 <li>luisa manequim</li>
 </ol>
+<!-- lista não ordenada-->
+ <ul>
+<li>uva verde</li>
+<li>melancia</li>
+<li>tomate</li>
+<li>morango</li>
+<li>kiwi</li>
+ </ul>
 </body>
 </html>
