--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <!-- lista ordenada-->
-<ol type="1">        
-<li>o amor tem dessas</li>
-<li>like him</li>
-<li>pior versão de mim</li>
-<li>iguaria</li>
-<li>luisa manequim</li>
-</ol>
-<!-- lista não ordenada-->
- <ul>
-<li>uva verde</li>
-<li>melancia</li>
-<li>tomate</li>
-<li>morango</li>
-<li>kiwi</li>
- </ul>
+    <ol id="ordenada" type="1" reversed>
+        <li>o amor tem dessas</li>
+        <li>like him</li>
+        <li>pior versão de mim</li>
+        <li>iguaria</li>
+        <li>luisa manequim</li>
+    </ol>
+    <!-- lista não ordenada-->
+    <ul id="nao-ordenada">
+        <li>uva verde</li>
+        <li>melancia</li>
+        <li>tomate</li>
+        <li>morango</li>
+        <li>kiwi</li>
+    </ul>
 </body>
+
 </html>
